<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333"
        android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rev_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    <LinearLayout
            android:id="@+id/ly_bottom"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@drawable/bottom_select"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_attention"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/collection"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

<!--        <ImageView-->
<!--                android:id="@+id/act_video_add"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:paddingTop="10dp"-->
<!--                android:paddingBottom="10dp"-->
<!--                android:src="@mipmap/tiktok_bg_add" />-->

        <TextView
                android:id="@+id/tv_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/msg"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        <TextView
                android:id="@+id/tv_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mine"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>