<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.shortvideo.viewmodel.RegisterViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity"
            android:background="@drawable/login_bg"
            android:orientation="vertical">
        <!--  登录页  -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="end"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/title_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:textSize="42sp"
                    android:text="@string/signUp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/reg_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@={viewModel.account}"
                    android:hint="@string/reg_account"
                    android:gravity="center"
                    android:layout_marginTop="20dp" />

            <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@={viewModel.password}"
                    android:gravity="center"
                    android:hint="@string/reg_password"
                    android:layout_marginTop="40dp" />

            <EditText
                    android:id="@+id/reg_repassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@={viewModel.rePassword}"
                    android:gravity="center"
                    android:hint="@string/reg_repassword"
                    android:layout_marginTop="40dp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

            <!--   注册按钮    -->
            <Button
                    android:id="@+id/signUp"
                    android:layout_width="140dp"
                    android:layout_height="80dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    binding:onClickCommand="@{viewModel.registerClickCommand}"
                    android:paddingBottom="20dp"
                    android:text="@string/signUp"
                    android:background="@drawable/btn_bg" />
            <!--   前往注册    -->
            <TextView
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    binding:onClickCommand="@{viewModel.toLoginCommand}"
                    android:text="@string/login"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#001AFF" />
        </LinearLayout>
    </LinearLayout>

</layout>