<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.shortvideo.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity"
            android:background="@drawable/login_bg"
            android:orientation="vertical">
        <!--  登录页  -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="end"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/title_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:textSize="42sp"
                    android:text="@string/signIn" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/login_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/login_hint_account"
                    android:text="@={viewModel.account}"
                    android:gravity="center"
                    android:layout_marginTop="20dp" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:text="@={viewModel.password}"
                        android:hint="@string/login_hint_password"
                        android:layout_marginTop="40dp" />

                <View
                        android:id="@+id/login_show_password"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignEnd="@+id/login_password"
                        android:layout_alignBottom="@+id/login_password"
                        android:background="@drawable/ic_password_eye"
                        android:layout_marginBottom="15dp" />
                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/login_show_password"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:checked="@={viewModel.autoLogin}"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:text="@string/autoLogin"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

            <!--   登录按钮    -->
            <Button
                    android:id="@+id/signIn"
                    android:layout_width="140dp"
                    android:layout_height="80dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingBottom="20dp"
                    binding:onClickCommand="@{viewModel.loginOnClickCommand}"
                    android:text="@string/signIn"
                    android:background="@drawable/btn_bg" />
            <!--   前往注册    -->
            <TextView
                    android:id="@+id/toSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    binding:onClickCommand="@{viewModel.toRegisterCommand}"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#001AFF" />

        </LinearLayout>
    </LinearLayout>
</layout>
